# nlp100knock

./: .gitignore  README.md  pyproject.toml
1.準備運動/: knock00.py  knock01.py  knock02.py  knock03.py  knock04.py  knock05.py  knock06.py  knock07.py  knock08.py  knock09.py
2.UNIXコマンド/: knock10.py  knock11.py  knock12.py  knock13.py  knock14.py  knock15.py  knock16.py  knock17.py  knock18.py  knock19.py
2.UNIXコマンド/output/: output10.txt  output11.txt  output13.txt  output14.txt  output16.txt  output17.txt
3.正規表現/: gz_thaw.py  json_format.py  knock20.py  knock21.py  knock22.py  knock23.py  knock24.py  knock25.py  knock26.py  knock27.py  knock28.py  knock29.py
3.正規表現/output/: knock25.txt  knock26.txt  knock27.txt  knock28.txt
4.言語解析/: README.md  knock30.py  knock31.py  knock32.py  knock33.py  knock34.py  knock35.py  knock36.py  knock36_timeout.py  knock37.py  knock38.py  knock39.py
4.言語解析/output/: output30.txt  output31.txt  output33.txt  output34.txt  output36.txt  output37.txt  output38.txt  output39.txt
5.大規模言語モデル/: README.md  knock40.py  knock41.py  knock42.py  knock43.py  knock44.py  knock45.py  knock46.py  knock47.py  knock48.py  knock49.py
5.大規模言語モデル/output/: output40.txt  output42.txt  output43.txt  output44.txt  output45.txt  output46.txt  output47.txt  output48.txt  (+1 more)
6.単語ベクトル/: knock50.py  knock51.py  knock52.py  knock53.py  knock54.py  knock55.py  knock56.py  knock57.py  knock58.py  knock59.py
7.機械学習/: knock60.py  knock61.py  knock62.py  knock63.py  knock64.py  knock65.py  knock66.py  knock67.py  knock68.py  knock69.py
8.ニューラルネット/: check_torch.py
(+24 files in other folders)
