[project]
name = "nlp100knock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ginza>=5.2.0",
    "google-generativeai>=0.8.5",
    "ja-ginza>=5.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "spacy>=3.8.11",
]
